--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@ body { margin:0; padding:0; font-size:20px; }
 .gpio-item{display:flex;justify-content:space-between;padding:10px 15px;border-bottom:1px solid #94a3b8;font-size:1.3rem;}
 #logBox{white-space:pre-line;height:300px;background:#0a0f16;color:#33ff55;padding:16px;border-radius:14px;border:1px solid #223344;overflow-y:auto;font-family:Consolas;font-size:1.15rem;}
 #timeBox{text-align:right;margin-top:6px;font-size:1rem;}
-html.day{background:#ffffff;color:#111827;}
+html.day{background:#f8fafc;color:#111827;}
 html.day .info-card, html.day .gpio-panel, html.day .button-panel{background:#fff;color:#000;}
 html.day #logBox{background:#f8fafc;color:#000;}
 </style>
@@ -30,7 +30,7 @@ html.day #logBox{background:#f8fafc;color:#000;}
 <div class="w-full mx-auto py-4 px-4">
   <div class="relative mb-6 px-2 h-16 flex items-center">
     <h1 id="mainTitle" class="font-extrabold absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
-        style="font-size:clamp(2.2rem,5vw,3.2rem);">ESP32 MQTT 대시보드</h1>
+        style="font-size:clamp(2rem,4.5vw,3rem);">ESP32 MQTT 대시보드</h1>
     <div id="themeToggle" class="text-4xl cursor-pointer ml-auto">🌙</div>
   </div>
 
